2011-10-17  Holger Hans Peter Freyther  <holger@moiji-mobile.com>

        [build] Introduce Qt/SH4 buildbot
        https://bugs.webkit.org/show_bug.cgi?id=70227

        Reviewed by Adam Roben.

        Add buildslave for Linux/Qt/SH4.

        * BuildSlaveSupport/build.webkit.org-config/config.json:

2011-10-16  Adam Barth  <abarth@webkit.org>

        Always enable ENABLE(DOM_STORAGE)
        https://bugs.webkit.org/show_bug.cgi?id=70189

        Reviewed by Eric Seidel.

        * Scripts/build-webkit:
        * waf/build/settings.py:

2011-10-15  Adam Barth  <abarth@webkit.org>

        Rename ENABLE(TILED_BACKING_STORE) to USE(TILED_BACKING_STORE)
        https://bugs.webkit.org/show_bug.cgi?id=70194

        Reviewed by Daniel Bates.

        * Scripts/build-webkit:

2011-10-15  Ojan Vafai  <ojan@chromium.org>

        run-webkit-tests should accept --child-processes
        https://bugs.webkit.org/show_bug.cgi?id=69713

        Reviewed by Adam Barth.

        Only set --child-processes=1 if --child-processes it not
        passed on the commandline.

        * Scripts/run-webkit-tests:

2011-10-15  Daniel Bates  <dbates@webkit.org>

        Extract common gdb code into its own function; Remove script gdb-safari
        https://bugs.webkit.org/show_bug.cgi?id=68499

        Reviewed by David Kilzer.

        Almost identical code is used in webkitdirs::{debugMiniBrowser, debugWebKitTestRunner,
        runSafari}() and in the script gdb-safari to launch gdb to debug an application.
        We should extract the common parts into a function that can be shared by all callers
        so as to remove duplicate code.

        As a side effect of removing duplicate code we can remove the script gdb-safari since
        its code has been incorporated into webkitdirs::debugSafari() which is called by the
        script debug-safari.

        * Scripts/debug-safari: Modified to call webkitdirs::debugSafari().
        * Scripts/gdb-safari: Removed.