@@ -1,3 +1,13 @@
+2011-10-17  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>
+
+        [Qt][WK2] Build dependency problems
+        https://bugs.webkit.org/show_bug.cgi?id=68456
+
+        Reviewed by Csaba Osztrogonác.
+
+        * Scripts/webkitdirs.pm:
+        (buildQMakeProject):
+
 2011-10-17  Holger Hans Peter Freyther  <holger@moiji-mobile.com>
 
         [build] Introduce Qt/SH4 buildbot
